src/tests/fixtures/type_definitions_from_alias/AliasIsArrayNotLiteral.invalid.ts.expected
-----------------
INPUT
----------------- 
/** @gqlType */
export type Query = {
  hello: string;
}[];

-----------------
OUTPUT
-----------------
src/tests/fixtures/type_definitions_from_alias/AliasIsArrayNotLiteral.invalid.ts:2:21 - error: Expected `@gqlType` type to be a type literal or `unknown`. For example: `type Foo = { bar: string }` or `type Query = unknown`.

2 export type Query = {
                      ~
3   hello: string;
  ~~~~~~~~~~~~~~~~
4 }[];
  ~~~
